--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 appdirs==1.4.3
 appnope==0.1.0
+Cython==0.25.2
 decorator==4.0.11
 flake8==3.3.0
 h5py==2.7.0
 ipython==5.3.0
 ipython-genutils==0.2.0
 Keras==2.0.3
+Mako==1.0.6
+MarkupSafe==1.0
 mccabe==0.6.1
 numpy==1.12.1
 olefile==0.44
@@ -17,15 +20,20 @@ prompt-toolkit==1.0.14
 protobuf==3.2.0
 ptyprocess==0.5.1
 pycodestyle==2.3.1
+pycosat==0.6.1
 pyflakes==1.5.0
 Pygments==2.2.0
 pyparsing==2.2.0
 PyYAML==3.12
+requests==2.13.0
+ruamel.yaml==0.14.10
 scikit-learn==0.18.1
 scipy==0.19.0
 simplegeneric==0.8.1
 six==1.10.0
+tensorflow==1.0.1
 tensorflow-gpu==1.0.1
 Theano==0.9.0
+tqdm==4.11.2
 traitlets==4.3.2
 wcwidth==0.1.7
