--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,80 @@
 appdirs==1.4.3
 appnope==0.1.0
+beautifulsoup4==4.4.1
+blinker==1.3
+boto==2.38.0
+chardet==2.3.0
+cloud-init==0.7.9
+command-not-found==0.3
+configobj==5.0.6
+cryptography==1.2.3
+cycler==0.10.0
 Cython==0.25.2
 decorator==4.0.11
+defer==1.0.6
 flake8==3.3.0
+GDAL==1.11.3
+google-compute-engine==2.2.4
 h5py==2.7.0
+html5lib==0.999
+idna==2.0
 ipython==5.3.0
 ipython-genutils==0.2.0
+Jinja2==2.8
+jsonpatch==1.10
+jsonpointer==1.9
 Keras==2.0.3
+language-selector==0.1
+lxml==3.5.0
 Mako==1.0.6
 MarkupSafe==1.0
+matplotlib==2.0.0
 mccabe==0.6.1
 numpy==1.12.1
+oauthlib==1.0.3
 olefile==0.44
 packaging==16.8
 pexpect==4.2.1
 pickleshare==0.7.4
 Pillow==4.1.0
+prettytable==0.7.2
 prompt-toolkit==1.0.14
 protobuf==3.2.0
 ptyprocess==0.5.1
+pyasn1==0.1.9
 pycodestyle==2.3.1
 pycosat==0.6.1
+pycups==1.9.73
+pycurl==7.43.0
 pyflakes==1.5.0
 Pygments==2.2.0
+pygobject==3.20.0
+PyJWT==1.3.0
 pyparsing==2.2.0
+pyserial==3.0.1
+python-apt==1.1.0b1
+python-dateutil==2.6.0
+python-debian==0.1.27
+python-systemd==231
+pytz==2017.2
+pyxdg==0.25
 PyYAML==3.12
 requests==2.13.0
 ruamel.yaml==0.14.10
 scikit-learn==0.18.1
 scipy==0.19.0
+screen-resolution-extra==0.0.0
 simplegeneric==0.8.1
 six==1.10.0
+ssh-import-id==5.5
+system-service==0.3
 tensorflow==1.0.1
 tensorflow-gpu==1.0.1
 Theano==0.9.0
 tqdm==4.11.2
 traitlets==4.3.2
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.13.1
 wcwidth==0.1.7
+xkit==0.0.0
