--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 appdirs==1.4.3
 appnope==0.1.0
+astroid==1.5.2
+cycler==0.10.0
 Cython==0.25.2
 decorator==4.0.11
 flake8==3.3.0
 h5py==2.7.0
 ipython==5.3.0
 ipython-genutils==0.2.0
+isort==4.2.5
 Keras==2.0.3
+lazy-object-proxy==1.3.1
 Mako==1.0.6
 MarkupSafe==1.0
 matplotlib==2.0.0
@@ -24,7 +28,10 @@ pycodestyle==2.3.1
 pycosat==0.6.1
 pyflakes==1.5.0
 Pygments==2.2.0
+pylint==1.7.1
 pyparsing==2.2.0
+python-dateutil==2.6.0
+pytz==2017.2
 PyYAML==3.12
 requests==2.13.0
 ruamel.yaml==0.14.10
@@ -38,3 +45,4 @@ Theano==0.9.0
 tqdm==4.11.2
 traitlets==4.3.2
 wcwidth==0.1.7
+wrapt==1.10.10
